--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "gsap": "^3.13.0",
     "lodash": "^4.17.21",
+    "pixi.js": "^8.14.3",
     "three": "^0.181.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
