--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "@eslint/object-schema": "^2.1.5",
+    "@types/markdown-it": "^14.1.2",
     "core-js": "^3.8.3",
+    "gray-matter": "^4.0.3",
     "gsap": "^3.13.0",
+    "markdown-it": "^14.1.0",
     "pixi.js": "^8.14.3",
+    "shiki": "^0.14.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
